--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ permalink:           pretty
 
 # Setup
 title:               Daniel
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 https://daeshu.github.io/blog
+tagline:             'blog'
+description:         '<img src="http://danielescobar.eu.org/_/rsrc/1496106704404/config/customLogo.gif" />'
+url:                 https://blog.escobar.eu.org
 baseurl:             ''
 paginate:            5
 
