--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 
 # Setup
 title:               Daniel
-tagline:             'blog'
+tagline:             'Escobar blog'
 description:         '<img src="http://danielescobar.eu.org/_/rsrc/1496106704404/config/customLogo.gif" />'
 url:                 https://blog.escobar.eu.org
 baseurl:             ''
