--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink:           pretty
 # Setup
 title:               Daniel
 tagline:             'Escobar blog'
-description:         '<img src="http://danielescobar.eu.org/_/rsrc/1496106704404/config/customLogo.gif" />'
+description:         '<img src="https://sites.google.com/site/daesweb/_/rsrc/1496106704404/config/customLogo.gif" />'
 url:                 https://blog.escobar.eu.org
 baseurl:             ''
 paginate:            5
