--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ permalink:           pretty
 
 # Setup
 title:               DANIEL
-tagline:             'ESCOBAR blog'
-description:         '<img src="https://github.com/daeshu/blog/blob/gh-pages/public/escobarzoho6.png" />'
+tagline:             'escobar blog'
+description:         '<img src="/blog/blob/gh-pages/public/escobarzoho6.png" />'
 url:                 https://blog.escobar.eu.org
 baseurl:             'https://blog.escobar.eu.org'
 paginate:            5
