--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:           pretty
 title:               Daniel
 tagline:             'A Jekyll theme'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 https://daeshu.github.io/test
+url:                 https://daeshu.github.io/blog2
 baseurl:             ''
 paginate:            5
 
