--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink:           pretty
 # Setup
 title:               DANIEL
 tagline:             'escobar blog'
-description:         '<a title="Daniel" href="/"><img src="https://sites.google.com/site/daesweb/_/rsrc/1498428880214/tesis/escobarzoho6.png" />'
+description:         '<a title="Daniel" href="/blog2"><img src="https://sites.google.com/site/daesweb/_/rsrc/1498428880214/tesis/escobarzoho6.png" />'
 url:                 https://daeshu.github.io/blog2
 baseurl:             '/blog2'
 paginate:            5
